--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "es6-promise": "^3.0.2",
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "mongoose": "^4.3.1",
     "morgan": "~1.6.1",
+    "rsvp": "^3.1.0",
     "serve-favicon": "~2.3.0"
   }
 }
