--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "es6-promise": "^3.0.2",
-    "express": "~4.13.1",
+    "express": "^4.13.3",
     "jade": "~1.11.0",
     "mongoose": "^4.3.1",
     "morgan": "~1.6.1",
